# WAN_NN_Latent_Upscale

./: nn_upscale.py  pyproject.toml
.github/workflows/: publish.yml
