[project]
name = "wan_nn_latent_upscale"
description = "A universal neural network latent upscaler that supports SD1.5, SDXL, Flux, and Wan2.2 models. Uses trained neural networks instead of simple interpolation for higher quality latent upscaling.\nBuilt upon the excellent foundation of [a/Ttl's ComfyUi_NNLatentUpscale](https://github.com/Ttl/ComfyUi_NNLatentUpscale) - this project extends the original work with universal model support and improved architectures."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core dependencies for Universal NN Latent Upscaler", "# These are typically already available in ComfyUI environments", "# PyTorch (usually pre-installed with ComfyUI)", "torch>=1.13.0", "torchvision>=0.14.0", "# Core Python packages (usually available)", "numpy>=1.21.0", "pillow>=8.0.0", "# Optional dependencies for development", "# Uncomment if you plan to train models or run development scripts", "# Training and visualization", "# matplotlib>=3.5.0", "# tqdm>=4.64.0", "# Data processing", "# scipy>=1.8.0", "# scikit-image>=0.19.0", "# Development tools", "# pytest>=7.0.0", "# black>=22.0.0", "# flake8>=4.0.0", "# Note: ComfyUI typically provides most of these dependencies", "# Only install additional packages if you encounter import errors"]

[project.urls]
Repository = "https://github.com/DenRakEiw/WAN_NN_Latent_Upscale"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DenRakEiw/WAN_NN_Latent_Upscale/wiki"
"Bug Tracker" = "https://github.com/DenRakEiw/WAN_NN_Latent_Upscale/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "WAN_NN_Latent_Upscale"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

